<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ShowDetailActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="Title"
                android:textAlignment="center"
                android:textColor="#373b54"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="R$"
                android:textAlignment="center"
                android:textColor="#ff5e00"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/pizza1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/product_detail_decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/minus" />

                <TextView
                    android:id="@+id/product_detail_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#373b54"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/product_detail_increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

            <TextView
                android:id="@+id/product_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Description"
                android:textColor="#686767"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/product_detail_add_to_cart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/orange_button_background"
        android:elevation="3dp"
        android:gravity="center"
        android:text="Adicionar"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>